e2e/policy/resource-quota/01-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
collectors:
  - type: events
    namespace: $NAMESPACE
commands:
  - script: |
      set -e
      used_pods=$(kubectl get resourcequota test-quota -n $NAMESPACE -o jsonpath='{.status.used.pods}')
      test "$used_pods" -eq 1
